--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.6",
+    "@apollo/client": "^3.11.10",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -17,24 +17,34 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/themes": "^3.1.6",
     "@stripe/stripe-js": "^2.4.0",
+    "@types/crypto-js": "^3.0.6",
+    "@types/qs": "^6.9.17",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.2.1",
+    "crypto-js": "^4.2.0",
+    "graphql": "^16.9.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
-    "next-cloudinary": "^5.20.0",
-    "qs": "^6.11.2",
+    "next-cloudinary": "^6.16.0",
+    "next-themes": "^0.4.3",
+    "qs": "^6.13.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "sonner": "^1.7.0",
     "stripe": "^14.16.0",
     "svix": "^1.17.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
