--- a/.env.qat
+++ b/.env.qat
@@ -1,6 +1,6 @@
 NODE_ENV=qat
-NEXT_PUBLIC_API_URL='https://ai-image.singaporetestlab.com'
-NEXT_PUBLIC_URL='https://nextime-office-qat.singaporetestlab.com'
+NEXT_PUBLIC_API_URL='https://nextime-office-qat.singaporetestlab.com'
+NEXT_PUBLIC_URL='https://ai-image.singaporetestlab.com'
 #NEXT
 # NEXT_PUBLIC_SERVER_URL=
 
